--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"/>
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Vue + TS</title>
-    <script type="module" src="/assets/index.2269c18b.js"></script>
-    <link rel="stylesheet" href="/assets/index.9eca1187.css">
+    <script type="module" crossorigin src="/assets/index.2c40e358.js"></script>
+    <link rel="stylesheet" href="/assets/index.e131269d.css">
   </head>
   <body>
     <div id="app"></div>
