--- a/#156419e2ac285fbe2a4d1b1fa1cdfed56beda45c/index.html
+++ b/#156419e2ac285fbe2a4d1b1fa1cdfed56beda45c/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Vue + TS</title>
-    <script type="module" crossorigin src="/books-pages/assets/index.2c40e358.js"></script>
-    <link rel="stylesheet" href="/books-pages/assets/index.e131269d.css">
+    <script type="module" crossorigin src="/books-pages/#156419e2ac285fbe2a4d1b1fa1cdfed56beda45c/assets/index.2c40e358.js"></script>
+    <link rel="stylesheet" href="/books-pages/#156419e2ac285fbe2a4d1b1fa1cdfed56beda45c/assets/index.e131269d.css">
   </head>
   <body>
     <div id="app"></div>
